fix: prevent overflow on transition

--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -24,3 +24,8 @@ mapbox-search-listbox > * > * {
   margin-bottom: 0px;
   display: inline;
 }
+
+/* hack to stop flickering during css animations */
+body {
+  overflow-x: hidden;
+}
